# fractal-flower

./: CMakeLists.txt  README.md  drawPlant.py  drawPlantIterative.py
2DPlant/: drawPlant.py  drawPlantIterative.py  requirements.txt
dependencies/glad/: glad.h
src/: draw3DPlant.cpp  draw3DPlant.h  glad.c
